--- a/CRMMobileSDK/Podfile
+++ b/CRMMobileSDK/Podfile
@@ -1,7 +1,7 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '8.0'
 
-pod 'ADALiOS', '=1.2.4'
+pod 'ADAL', '~> 2.2.0'
 
 target 'CRMMobileSDK' do
 
